# zsh-ios

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  uninstall.sh
data/: descriptions.yaml  fig_dump.js
docs/: DATA-SOURCES.md  config.md
fuzz/: Cargo.toml  watch-crashes.sh
fuzz/corpus/fuzz_completions_parser/: seeds.txt
fuzz/corpus/fuzz_ingest/: seeds.txt
fuzz/corpus/fuzz_path_resolve/: seeds.txt
fuzz/fuzz_targets/: fuzz_bash_completions.rs  fuzz_completions_parser.rs  fuzz_history.rs  fuzz_ingest.rs  fuzz_path_resolve.rs  fuzz_regex_args.rs  fuzz_resolve.rs  fuzz_trie_serde.rs
plugin/: zsh-ios.zsh
src/: bash_completions.rs  carapace_completions.rs  completions.rs  config.rs  fig_completions.rs  fish_completions.rs  galiases.rs  history.rs  ingest.rs  lib.rs  locks.rs  main.rs  path_resolve.rs  pins.rs  presets.rs  regex_args.rs  resolve.rs  runtime_cache.rs  runtime_complete.rs  runtime_config.rs  scanner.rs  trie.rs  type_resolver.rs  user_config.rs
src/resolve/: complete.rs  engine.rs  escape.rs  mod.rs
tests/: cli.rs
tests/plugin/: approximate.bats  completer_chain.bats  esc_passthrough.bats  ghost_preview.bats  picker.bats  picker_arrows.bats  quote_context.bats  safe_eval.bats  widgets.bats
tests/plugin/helpers/: run-in-zsh  test_helper.bash  zsh-ios-stub
